# circuit-breaker-manager

./: .dockerignore  .env.sample  Dockerfile  README.MD  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-pipeline.yml
.github/workflows/git-ci/: .yml
config/: settings.py
src/: main.py
src/database/: __init__.py  session_postgresql.py  session_redis.py
src/database/alembic/: env.py
src/database/alembic/versions/: 87d357f06fa3_added_monitored_services_circuit_breaks_.py  cff53a6181a2_added_monitored_services_circuit_breaks_.py
src/database/models/: circuit_breaker.py
src/repository/: monitoring_repository.py
src/scheduler/: rq_sheduler.py
src/schemas/: monitoring.py
src/services/: cache_service.py  life_checker.py  redis_pubsub_manager.py  service_status_cache.py  websocket_manager.py
src/sheduler/: rq_sheduler.py
src/tasks/: db.py  monitoring.py  tasks.py
src/tests/: conftest.py
src/tests/test_api/: conftest.py  test_e2e.py  test_routers.py  test_tasks.py  test_utils.py
src/utils/: life_checker.py
src/views/: __init__.py  monitoring.py  routes.py
