[project]
name = "circuit-breaker-manager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.31.0",
    "fakeredis>=2.33.0",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "rq-dashboard-fast>=0.5.12",
    "rq-scheduler>=0.14.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
